# ChangeLog for dev-java/gnu-classpath
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-classpath/ChangeLog,v 1.72 2007/07/22 09:23:16 graaff Exp $

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org> gnu-classpath-0.90.ebuild,
  gnu-classpath-0.92.ebuild:
  Drop virtual/x11 references.

  02 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  gnu-classpath-0.93.ebuild:
  Give --host to ./configure.

  02 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/0.93-nsplugin.patch, gnu-classpath-0.93.ebuild:
  Fix compiling with latest versions of firefox or seamonkey. Fixes bug #168780.

  28 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  gnu-classpath-0.93.ebuild:
  Change -O3 to -O2 in CFLAGS because gnu-classpath does not compile with -O3
  currently. See bug #168800.

*gnu-classpath-0.93 (28 Feb 2007)

  28 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  +gnu-classpath-0.93.ebuild:
  Version bump. This version add the gconf use flag for a preferences
  backstore and nsplugin for a browser plugin.

  05 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  gnu-classpath-0.90.ebuild, gnu-classpath-0.92.ebuild:
  Convert einfo to elog.

*gnu-classpath-0.92 (19 Nov 2006)

  19 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  +gnu-classpath-0.92.ebuild:
  Version bump, bug #133875. Now is slotted, so VMs can use the appropriate
  version they are compatible with.

  06 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  gnu-classpath-0.90.ebuild:
  Fix RDEPEND wrt bug #150285.

  21 Jul 2006; Petteri Räty <betelgeuse@gentoo.org>
  -gnu-classpath-0.14.ebuild:
  Removed an old version.

  18 Jul 2006; Michael Hanselmann <hansmi@gentoo.org>
  gnu-classpath-0.90.ebuild:
  Stable on ppc.

  24 Jun 2006; Petteri Räty <betelgeuse@gentoo.org>
  gnu-classpath-0.90.ebuild:
  Added comments to the ebuild about fastjar wrt bug #135688.

  23 Jun 2006; Simon Stelling <blubb@gentoo.org> gnu-classpath-0.90.ebuild: